Fix iPhone artworks layout bug and change "next" and "previous" button behavior

--- a/src/components/molecules/Artworks/artworks.module.scss
+++ b/src/components/molecules/Artworks/artworks.module.scss
@@ -20,7 +20,7 @@
   cursor: pointer;
   height: 256px;
   margin: 0 12px;
-  overflow-x: hidden;
+  overflow: hidden;
   width: 256px;
 }
 
